// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activities should render 1`] = `
<Card
  pageDisplay={true}
>
  <Spinner
    alignCenter={false}
    className="flex-grow-1"
    display="dotted"
    fadeIn={false}
    inline={false}
    key="LOADING"
    light={false}
    overlay={false}
    spacer={true}
  />
</Card>
`;

exports[`Activities should render a fallback display when engagement score is null 1`] = `
<Card
  pageDisplay={true}
>
  <CardTabs
    activeTabId="engagement"
    tabs={
      Array [
        Object {
          "secondaryInfo": Array [
            <span
              className="primary-content"
            >
              100
            </span>,
            " Last ",
            30,
            " Days",
          ],
          "tabId": "activities",
          "tabUrl": "/workspace/23/contacts/accounts/1/activities/activities",
          "title": "Account Activities",
        },
        Object {
          "secondaryInfo": Array [
            <span
              className="primary-content"
            >
              --
            </span>,
            " Avg. Member Score",
          ],
          "tabId": "engagement",
          "tabUrl": "/workspace/23/contacts/accounts/1/activities/engagement",
          "title": "Account Engagement Score",
        },
      ]
    }
  />
  <AccountEngagement
    data={
      Array [
        Object {
          "contributors": 1,
          "intervalInitDate": 1531177266366,
          "scoreAvg": 2,
        },
        Object {
          "contributors": 1,
          "intervalInitDate": 1531263666366,
          "scoreAvg": 2.8000000000000003,
        },
      ]
    }
    groupId="23"
    id="1"
    previousScore={1.6}
  />
</Card>
`;

exports[`Activities should render with Engagement tab as active 1`] = `
<Card
  pageDisplay={true}
>
  <CardTabs
    activeTabId="engagement"
    tabs={
      Array [
        Object {
          "secondaryInfo": Array [
            <span
              className="primary-content"
            >
              100
            </span>,
            " Last ",
            30,
            " Days",
          ],
          "tabId": "activities",
          "tabUrl": "/workspace/23/contacts/accounts/1/activities/activities",
          "title": "Account Activities",
        },
        Object {
          "secondaryInfo": Array [
            <span
              className="primary-content"
            >
              <React.Fragment>
                4.90
                <span
                  className="denominator"
                >
                  /10
                </span>
              </React.Fragment>
            </span>,
            " Avg. Member Score",
          ],
          "tabId": "engagement",
          "tabUrl": "/workspace/23/contacts/accounts/1/activities/engagement",
          "title": "Account Engagement Score",
        },
      ]
    }
  />
  <AccountEngagement
    data={
      Array [
        Object {
          "contributors": 1,
          "intervalInitDate": 1531177266366,
          "scoreAvg": 2,
        },
        Object {
          "contributors": 1,
          "intervalInitDate": 1531263666366,
          "scoreAvg": 2.8000000000000003,
        },
      ]
    }
    groupId="23"
    id="1"
    previousScore={1.6}
  />
</Card>
`;

exports[`Activities should render with error display 1`] = `
<Card
  pageDisplay={true}
>
  <ErrorDisplay
    buttonLabel="Reload"
    key="ERROR_DISPLAY"
    message="An unexpected error occurred."
    onReload={[Function]}
    spacer={true}
  />
</Card>
`;
